k8s/apps/minecraft.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gaming
