k8s/apps/discord-bot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot
  namespace: services
  labels:
    app: discord-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot
  template:
    metadata:
      labels:
        app: discord-bot
    spec:
      containers:
        - name: bot
          image: cglavin50/homelab-discord-bot:latest
